--- a/main.css
+++ b/main.css
@@ -1,3 +1,19 @@
 body {
+    font-family: Courier New, monospace;
     background-color: #ff8181;
+    margin: 0;
+    padding: 0;
 }
+
+header {
+    text-align: center;
+}
+
+h1 {
+    color: #333;
+    margin: 0;
+    padding: 3em 0 5em;;
+    font-size: 2.5em;
+    font-weight: bold;
+}
+
