New Style/Proper Images added

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: Courier New, monospace;
-    background-color: #ff8181;
+    background-color: #C4FEDA;
     margin: 0;
     padding: 0;
     display: flex;
