--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ header {
 h1 {
     color: #333;
     margin: 0;
-    padding: 1em 0 1em; /* Adjusted padding-top to move the text up */
+    padding: 1em 0 1em; 
     font-size: 2.5em;
     font-weight: bold;
 }
@@ -25,7 +25,7 @@ h1 {
 h2 {
     color: #333;
     margin: 0;
-    padding: 0.5em 0; /* Adjusted padding-top to move the text up */
+    padding: 0.5em 0;
     font-size: 1.5em;
 }
 
