--- a/main.css
+++ b/main.css
@@ -22,15 +22,13 @@ h1 {
     font-weight: bold;
 }
 
-h2 {
-    color: #333;
-    margin: 0;
-    padding: 0.5em 0;
-    font-size: 1.5em;
+.button-container {
+    display: flex;
+    align-items: center;
 }
 
 .gif-container {
-    margin-top: 20px;
+    margin: 0 20px; /* Add margin around the image */
 }
 
 .gif-container img {
@@ -38,4 +36,25 @@ h2 {
     height: auto;
     margin: 0 auto;
     display: block;
+}
+
+button, a {
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 1em;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+}
+
+.yes-button {
+    order: -1; 
+    background-color: rgba(0, 0, 0, 0.8); 
+    text-decoration: none; 
+}
+
+.no-button {
+    background-color: rgba(0, 0, 0, 0.8); 
+    font-family: Courier New, monospace;
+    color: #ffffff; 
 }
