Added button funcntlity

--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ h1 {
 }
 
 .gif-container {
-    margin: 0 20px; /* Add margin around the image */
+    margin: 0 20px; 
 }
 
 .gif-container img {
